[package]
name = "gtkspike"
version = "0.1.0"
authors = ["So Koide <sokoide@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.0"

[dependencies.gtk]
version = "0.9.2"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
